// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form>
  <Stack>
    <p>
      Enter the code generated by your two-factor auth application, or one of your
       
      <ExternalLink
        to="https://support.sparkpost.com/customer/portal/articles/1948449"
      >
        backup codes
      </ExternalLink>
      .
    </p>
    <Field
      autoFocus={true}
      component={[Function]}
      id="code"
      label="Code"
      name="code"
      placeholder="123456"
      validate={[Function]}
    />
    <Box>
      <Button
        submit={true}
        variant="primary"
      >
        Log In
      </Button>
    </Box>
  </Stack>
</form>
`;

exports[`renders correctly verifying tfa 1`] = `
<form>
  <Stack>
    <p>
      Enter the code generated by your two-factor auth application, or one of your
       
      <ExternalLink
        to="https://support.sparkpost.com/customer/portal/articles/1948449"
      >
        backup codes
      </ExternalLink>
      .
    </p>
    <Field
      autoFocus={true}
      component={[Function]}
      id="code"
      label="Code"
      name="code"
      placeholder="123456"
      validate={[Function]}
    />
    <Box>
      <Button
        disabled={true}
        submit={true}
        variant="primary"
      >
        Logging In
      </Button>
    </Box>
  </Stack>
</form>
`;
